# explainable-palletizer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  dev.sh  pyproject.toml
app/: .env.example  pyproject.toml
app/src/dr_ai_palletizer/: __init__.py  action_parser.py  api_models.py  config.py  control_loop.py  device.py  prompt_builder.py  server.py
app/src/dr_ai_palletizer/clients/: __init__.py  inference_client.py  sim_client.py
app/src/dr_ai_palletizer/domain/: models.py  pallet.py
app/tests/: test_action_parser.py  test_api.py  test_api_models.py  test_config.py  test_control_loop.py  test_prompt_builder.py  test_sim_client.py
app/ui/: index.html  package.json  vite.config.ts
app/ui/src/: App.tsx  index.css  store.ts
app/ui/src/components/: ActionPanel.tsx  BoxImagesPanel.tsx  ControlPanel.tsx  Header.tsx  ReasoningPanel.tsx  SimViewer.tsx  ViewTabs.tsx
app/ui/src/hooks/: useSimEvents.ts  useSimStream.ts
docker/: .env.example  README.md  docker-compose.test.yml  docker-compose.yml  inference.sh  launch.sh  stack.sh
docker/app/: Dockerfile  entrypoint.sh
docker/frontend/: Dockerfile  index.html  nginx.conf
docker/sim/: Dockerfile  (+1 more)
motion/: pyproject.toml
motion/src/drp_motion/: __init__.py
scripts/: install_cuda_torch.sh  install_curobo.sh  label_sim_boxes.py  mix_dataset.py  view_training_data.py
sim/: README.md  pyproject.toml
sim/configs/: box_spawn.yaml
sim/robot/urdf/: p3020.urdf
sim/scripts/: dataset.py  import_p3020_urdf.py  inspect_usd_bbox.py  palletizing_demo.py  pick_place_once.py  run_env.py  test_fragile_sticker.py  test_isaac_curobo.py  test_scene.py  view_p3020.py
sim/src/drp_sim/: __init__.py  _constants.py  api.py  api_models.py  box_image_capture.py  box_pool.py  box_spawn_config.py  box_spawner.py  cli.py  conveyor_buffer.py  env.py  frame_buffer.py  motion_interface.py  pallet_pattern_generator.py  pallet_solver.py  pallet_state.py  pick_loop.py  robot.py  server.py  sim_runner.py  sticker_attacher.py
sim/tests/: conftest.py  test_box_image_buffer.py  test_box_spawn_config.py  test_constants.py  test_conveyor_buffer.py  test_frame_buffer.py  test_motion_interface.py  test_pallet_solver.py  test_pallet_state.py  test_sim_api_models.py  test_sim_runner.py  test_trajectory_collision.py
sim/usd/: SM_CardBoxA_01.usd  SM_CardBoxA_01_314.usd  SM_CardBoxC_01.usd  SM_PaletteA_01.usd  damaged_box.usd  mixed_palletizing_scene.usd  pallet_with_dollly.usd  stacking_conveyor.usd
sim/usd/assets/: SM_CardBoxD_02.usd
sim/usd/assets/boxes/: SM_CardBoxD_01.usd  SM_CardBoxD_05.usd  cardboard_box.usda
sim/usd/assets/boxes/damaged/: damaged_untaped.usd  damaged_untaped2.usd
sim/usd/assets/robots/: p3020_curobo.yaml
sim/usd/assets/textures/stickers/: metadata.json
sim/usd/configuration/: mixed_palletizing_scene_robot.usd
sim/usd/configuration/usd_configuration_bak/: mixed_palletizing_scene_physics.usd  mixed_palletizing_scene_sensor.usd
(+1 files in other folders)
