[project]
name = "nvidia-zenith"
version = "0.1.0"
description = "AI-powered palletizer: simulation, motion planning, and application"
requires-python = ">=3.11"

[tool.uv]
# isaacsim declares pywin32 without a platform marker; inject one to prevent Linux resolution failure.
# isaacsim pins torch==2.7 / torchvision==0.22; override so the workspace resolves.
# NOTE: the override resolves CPU torch from PyPI. Use `make init` to install the
# correct CUDA variant after syncing.
override-dependencies = [
    "pywin32>=306; sys_platform == 'win32'",
    "torch>=2.9,<2.10",
    "torchvision>=0.24,<0.25",
]
[tool.uv.workspace]
members = ["sim", "motion", "app"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["sim/tests", "motion/tests", "app/tests"]
addopts = "-v --tb=short --import-mode=importlib"
