[project]
name = "drp-motion"
version = "0.1.0"
description = "cuRobo motion planning for the palletizer"
requires-python = ">=3.11,<3.12"
dependencies = []
# curobo is installed from source or NVIDIA index -- not a standard pip dependency.
# See: https://curobo.org/get_started/1_install_instructions.html

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drp_motion"]
