[project]
name = "drp-sim"
version = "0.1.0"
description = "Isaac Sim environments and USD assets for the palletizer"
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[tool.uv.sources]
isaacsim = { index = "nvidia" }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[project.optional-dependencies]
sim = [
    "isaacsim[all,extscache]==5.1.0; sys_platform == 'linux'",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
drp-sim = "drp_sim.cli:main"
drp-pick = "drp_sim.pick_loop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drp_sim"]
